--- a/diffusion/instant_id/lcm_scheduler_config.json
+++ b/diffusion/instant_id/lcm_scheduler_config.json
@@ -1,1 +1,21 @@
-{"num_train_timesteps": 1000, "beta_start": 0.00085, "beta_end": 0.012, "beta_schedule": "scaled_linear", "trained_betas": null, "prediction_type": "epsilon", "timestep_spacing": "trailing", "steps_offset": 1, "rescale_betas_zero_snr": false, "_use_default_values": ["rescale_betas_zero_snr"], "_class_name": "EulerAncestralDiscreteScheduler", "_diffusers_version": "0.24.0.dev0", "clip_sample": false, "interpolation_type": "linear", "sample_max_value": 1.0, "set_alpha_to_one": false, "skip_prk_steps": true}
+{
+    "num_train_timesteps": 1000,
+    "beta_start": 0.00085,
+    "beta_end": 0.012,
+    "beta_schedule": "scaled_linear",
+    "trained_betas": null,
+    "prediction_type": "epsilon",
+    "timestep_spacing": "trailing",
+    "steps_offset": 1,
+    "rescale_betas_zero_snr": false,
+    "_use_default_values": [
+        "rescale_betas_zero_snr"
+    ],
+    "_class_name": "EulerAncestralDiscreteScheduler",
+    "_diffusers_version": "0.24.0.dev0",
+    "clip_sample": false,
+    "interpolation_type": "linear",
+    "sample_max_value": 1.0,
+    "set_alpha_to_one": false,
+    "skip_prk_steps": true
+}
